--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQVideoPatrol.storyboard
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQVideoPatrol.storyboard
@@ -41,10 +41,23 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWk-fv-4H1">
+                                <rect key="frame" x="5" y="69" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="eIN-dl-R5g"/>
+                                    <constraint firstAttribute="width" constant="40" id="o2T-In-Pzu"/>
+                                </constraints>
+                                <state key="normal" image="icon_map_location"/>
+                                <connections>
+                                    <action selector="RepositionButtonClick:" destination="zwV-kS-qKi" eventType="touchUpInside" id="DN1-wG-wmn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="iWk-fv-4H1" firstAttribute="top" secondItem="HnN-3c-GhA" secondAttribute="bottom" constant="5" id="1pP-61-W1v"/>
                             <constraint firstAttribute="trailing" secondItem="q7w-Gb-S17" secondAttribute="trailing" id="OGv-4l-WYN"/>
+                            <constraint firstItem="iWk-fv-4H1" firstAttribute="leading" secondItem="aTZ-Hw-g7u" secondAttribute="leading" constant="5" id="PwV-QI-dDt"/>
                             <constraint firstItem="q7w-Gb-S17" firstAttribute="top" secondItem="HnN-3c-GhA" secondAttribute="bottom" id="Qta-c9-IC7"/>
                             <constraint firstItem="nM0-PX-6aI" firstAttribute="top" secondItem="q7w-Gb-S17" secondAttribute="bottom" id="htw-VY-T2t"/>
                             <constraint firstItem="q7w-Gb-S17" firstAttribute="leading" secondItem="aTZ-Hw-g7u" secondAttribute="leading" id="vlA-sf-9cW"/>
@@ -60,4 +73,7 @@
             <point key="canvasLocation" x="-244" y="179"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_map_location" width="22" height="22"/>
+    </resources>
 </document>
